--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -38,11 +38,12 @@ The TDW is a joint initiative between the Faculty of Information and the Departm
 	- Oliver Giesecke is a research fellow at the Hoover Institution at Stanford University. Giesecke works on topics related to asset pricing and public finance. His recent work studies the finances of state and local governments across the United States. This includes the capital structure of state governments, the book and market equity position of city governments, and the status quo and trend of public pension obligations. For his work on city governments’ finances, he was awarded the NASDAQ OMX Award for the best paper on asset pricing. His work on pension obligations was instrumental to shaping state legislation. In addition, Giesecke has conducted a large-scale survey that elicits the retirement plan preferences of public sector employees across the United States. He is the author of the Stanford municipal finances dashboard which provides, for the first time, credit spreads and fiscal fundamentals for many state and local governments in the United States. The dashboard has received national media coverage in *The Bond Buyer*. Prior to his academic career, he has worked for Germany’s Federal Agency for Financial Market Stabilization (FMSA) and as a senior quantitative finance consultant. Giesecke received a Ph.D. in finance and economics from Columbia University, a Master’s in economics from the Graduate Institute in Geneva, Switzerland, and a BA from Frankfurt University, Germany.
 - Tuesday 6 February 2024, 6:10pm - 7pm
 	- **Bradley Congelio**, Kutztown University of Pennsylvania
-	- "Introduction to NFL Analytics with R"
-	- Bradley Congelio is an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. His main area of instruction & research is in Data Analytics and Sport Analytics. He is the author of [*Introduction to NFL Analytics with R*](https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751), which was published by CRC Press in December 2023. His research focuses on using big data, the R programming language, and analytics to explore the impact of professional stadiums on neighboring communities. He uses the proprietary Zillow ZTRAX database as well as the U.S. Census and other forms of data to create robust, applied, and useful insight into how best to protect those livings in areas where stadiums are proposed for construction. His work in sport analytics, specifically the NFL, has been featured on numerous media outlets, including the USA Today and Sports Illustrated.
+	- ["Introduction to NFL Analytics with R"](https://youtu.be/VU62ZuK4Kc4)
+	- Bradley Congelio is an Assistant Professor in the College of Business at Kutztown University of Pennsylvania. His main area of instruction & research is in Data Analytics and Sport Analytics. He is the author of [*Introduction to NFL Analytics with R*](https://www.routledge.com/Introduction-to-NFL-Analytics-with-R/Congelio/p/book/9781032427751), which was published by CRC Press in December 2023. His research focuses on using big data, the R programming language, and analytics to explore the impact of professional stadiums on neighboring communities. He uses the proprietary Zillow ZTRAX database as well as the U.S. Census and other forms of data to create robust, applied, and useful insight into how best to protect those livings in areas where stadiums are proposed for construction. His work in sport analytics, specifically the NFL, has been featured on numerous media outlets, including the *USA Today* and *Sports Illustrated*.
 - Thursday 8 February 2024, noon - 1pm
 	- **Andreas Florath**, Deutsche Telekom
 	- "LLM Interactive Optimization of Open Source Python Libraries -- Case Studies and Generalization"
+	- Andreas Florath is a Cloud Architect at Deutsche Telekom AG, with a focus on Edge-Cloud Continuum Architecture. His tenure of nearly 25 years at the company has seen him contribute significantly to the development of innovative technology solutions, particularly through his work with the Open Grid and EU Cloud Alliances. Andreas is proficient in complex system analysis and programming languages such as C, C++, and Python, which he leverages to directly implement and test architectures, especially in the realms of cloud federation and AI/ML applications within the telecommunications industry. His expertise is further underscored by his involvement in numerous projects and his commitment to advancing the field through research and collaboration.
 - Thursday 15 February 2024, noon - 1pm
 	- **Richard Iannone**, Posit, PBC
 	- "Using Great Tables to Make Presentable Tables in Python"
@@ -50,9 +51,10 @@ The TDW is a joint initiative between the Faculty of Information and the Departm
 - Thursday 22 February 2024, noon - 1pm
 	- **Jessica Otis**, George Mason University
 	- "By the Numbers: Numeracy, Religion, and the Quantitative Transformation of Early Modern England"
-	- Dr Jessica Marie Otis is Assistant Professor of History and Director of Public Projects at the Roy Rosenzweig Center for History and New Media at George Mason University. She is the author of the new book "By the Numbers: Numeracy, Religion, and the Quantitative Transformation of Early Modern England" published by Oxford University Press.
+	- Dr Jessica Marie Otis is Assistant Professor of History and Director of Public Projects at the Roy Rosenzweig Center for History and New Media at George Mason University. She is the author of the new book *By the Numbers: Numeracy, Religion, and the Quantitative Transformation of Early Modern England* published by Oxford University Press.
 - Thursday 29 February 2024, noon - 1pm
 	- **Sky CH-Wang**, Columbia University
+	- "Do Androids Know They're Only Dreaming of Electric Sheep?"
 - Thursday 7 March 2024, noon - 1pm
 	- **Matheus Facure**, Nubank
 	- Matheus has a background in Economics and is a Staff Data Scientist at Nubank. He works mostly with credit underwriting and causal inference. He is the author of *Causal Inference in Python* (O'Reilly) and *Causal Inference for the Brave and True* (Online, Open Source).
