--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -55,6 +55,11 @@ The TDW is a joint initiative between the Faculty of Information and the Departm
 - Thursday 29 February 2024, noon - 1pm
 	- **Sky CH-Wang**, Columbia University
 	- "Do Androids Know They're Only Dreaming of Electric Sheep?"
+- Friday 1 March 2024, noon - 1pm
+	- **Jacob Austin**, Google DeepMind
+	- "Resolving Code Review Comments with Machine Learning"
+	- Code reviews are a critical part of the software development process, taking a significant amount of the code authors' and the code reviewers' time. As part of this process, the reviewer inspects the proposed code and asks the author for code changes through comments written in natural language. With machine learning, we have an opportunity to automate and streamline the code-review process, e.g., by proposing code changes based on a comment’s text.
+	- Jacob Austin is a Senior Research Engineer at Google DeepMind, working on program synthesis and large language models. He was previously an AI Resident at Google Brain, and a Research Intern at NVIDIA with Anima Anandkumar. He holds a bachelor's degree in computer science and mathematics from Columbia University. He studied machine learning and robotics at the Columbia Creative Machines Lab. He is also a pianist who plays a lot of chamber music, and has performed at Carnegie Hall, Music Mountain, Apple Hill, and Kinhaven.
 - Thursday 7 March 2024, noon - 1pm
 	- **Matheus Facure**, Nubank
 	- Matheus has a background in Economics and is a Staff Data Scientist at Nubank. He works mostly with credit underwriting and causal inference. He is the author of *Causal Inference in Python* (O'Reilly) and *Causal Inference for the Brave and True* (Online, Open Source).
